|
Quick Lists
|
|
Bug ID:
|
6723228
|
|
Votes
|
0
|
|
Synopsis
|
NUMA allocator: assert(lgrp_id != -1, "No lgrp_id set")
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b03)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
07-JUL-2008
|
|
Description
|
NUMA allocator fails with assert(lgrp_id != -1, "No lgrp_id set") while resizing TLABs. The failure will occur if the allocator detects the topology change, in which case it whould assign -1 to lgrp_id of all threads.
Posted Date : 2008-07-07 21:17:56.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/d6340ab4105b
Posted Date : 2008-07-17 19:42:41.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |